--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,46 @@
     <link href="./css/bootstrap.min.css" rel="stylesheet">
     <title>Apostas</title>
 </head>
+
 <body>
-    
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-4">
+                <img src="assets/img/cavalo.jpg" alt="Jockey Club" class="imgProg">
+            </div>
+            <div class="col-sm-8">
+                <h1>Jockey Clube - Controle de Apostas</h1>
+
+                <div class="row">
+                    <div class="col-sm-6">
+                        <p>
+                            <label for="inCavalo">Nº Cavalo:</label>
+                            <input type="text" class="form-control aDireita" id="inCavalo" autofocus>
+                        </p>
+                    </div>
+                    <div class="col-sm-6">
+                        <h5 id="outCavalo"></h5>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-sm-6">
+                        <p>
+                            <label for="inAposta">Aposta R$:</label>
+                            <input type="text" class="form-control aDireita" id="inValor">
+                        </p>
+                    </div>
+                    <div class="col-sm-6">
+                        <input type="button" class="btn btn-primary margemSup" value="Apostar" id="btApostar">
+                        <input type="button" class="btn btn-success margemSup" value="Ganhador" id="btGanhador">
+                        <input type="button" class="btn btn-danger margemSup" value="Novo Páreo" id="btNovo">
+                    </div>
+                </div>
+
+                <pre id="outApostas"></pre>
+            </div>
+        </div>
+        <script src="js/apostas.js"></script>
 </body>
+
 </html>
